--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,6 @@
 body
 {
+    background: #1e1f24;
     color: #333;
     text-align: left;
     font-family: "Arial";
@@ -10,13 +11,20 @@ body
 
 #cabecera
 {
-    background: #33a;
+    background: #37488b;
     box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5);
     color: white;
     font-weight: bold;
     margin: 0;
     padding: 0.5em;
 }
+
+#cabecera #logo
+{
+    width: 20px;
+    vertical-align: middle;
+}
+
 #cabecera #tagline
 {
     padding: 0 0 0 1em;
@@ -42,9 +50,9 @@ body
     justify-content: center;
     align-items: center;
     height: 10vh;
-  }
+}
   
-  .mi-boton {
+.mi-boton {
     display: inline-block;
     padding: 10px 20px;
     background-color: #4CAF50;
@@ -53,15 +61,20 @@ body
     border-radius: 4px;
     border: none;
     font-size: 16px;
-  }
+}
   
-  .mi-boton:hover {
+.mi-boton:hover {
     background-color: #45a049;
-  }
+}
 
 #Centrar
 {
     text-align: center;
     padding-top: 130px;
 }
-  
+
+#post
+{
+    background: white;
+    padding: 1em;
+}  
