--- a/css/estilos.css
+++ b/css/estilos.css
@@ -64,4 +64,12 @@ body
     text-align: center;
     padding-top: 130px;
 }
+
+#footer
+{
+    background: #777;
+    color: white;
+    text-align: center;
+    padding: 0.5em;
+}
   
